Fix details alignment

--- a/styles/Details.module.css
+++ b/styles/Details.module.css
@@ -21,6 +21,8 @@
 .titleMain {
   margin: 3rem 1rem 2rem;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .descMed {
